# Reef

./: .gitignore  .gitmodules  CLAUDE.md  COLOR_PALETTE.md  Caddyfile  Dockerfile  Info.plist  README.md  archive.sh  deploy.sh  dev.sh  docker-compose.yml  init.sql  modal_app.py  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.sh  test.sh
Reef-Server/: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  benchmark_models.py  demo_handwriting.py  deploy.sh  docker-compose.yml  fly.toml  make_worksheet.py  mathpix_rate_limit_results.md  modal_surya.py  pyproject.toml  requirements.txt  ruff.toml  test_mathpix_pipeline.py  test_pipeline.py  test_snip.py
Reef-Server/api/: admin.py  index.py  tts.py  tts_stream.py  voice.py
Reef-Server/app/: auth.py  config.py  main.py
Reef-Server/app/models/: __init__.py  answer_key.py  demo.py  generate_question.py  group_problems.py  question.py  region.py  tutor.py
Reef-Server/app/routers/: bug_report.py  demo_problem.py  fit_shape.py  generate_question.py  health.py  reconstruct.py  tutor.py  (+8 more)
Reef-Server/docs/: test-coverage-todo.md
Reef-Server/handwriting/: demo_handwriting.py
Reef-Server/lib/: database.py  embedding_client.py  latex_compiler.py  llm_client.py  mock_responses.py  question_to_latex.py  region_extractor.py  surya_client.py  tts_client.py
Reef-Server/modal/: embeddings.py  surya_layout.py
Reef-Server/scripts/: inject_strokes.py  mathpix_stress_test.py  sim.html  sim_helper.py  sim_state.json  simulate_tutor.py  stress_test_mathpix.py  stress_test_strokes.py  test_reconstruct.py  validate_strokes.py
Reef-Server/sql/: add_settings_column.sql  create_api_costs.sql  create_bug_reports.sql  create_canvas_strokes_index.sql  create_chat_history.sql  create_concept_struggles.sql  create_simulation_state.sql  create_simulation_strokes.sql  create_student_work.sql  create_tutor_progress.sql  migrate_full_schema.sql
Reef-Server/tests/: conftest.py  test_api.py  test_chunk_manager.py  test_fit_shape.py  test_health.py  test_latex_completeness.py  test_render_latex.py  test_transcribe.py  test_tutor.py
Reef-Server/tools/: stroke_simulator.py
Reef-Simulator-MCP/: pyproject.toml  server.py
(+821 files in other folders)
