[project]
name = "reef-simulator-mcp"
version = "0.1.0"
description = "MCP server for Reef iOS simulator automation"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
